syntax = "proto3";

package security_service;
import "requests/security/query_security_request.proto";
import "requests/security/query_security_response.proto";
import "requests/security/create_security_request.proto";
import "requests/security/create_security_response.proto";
import "requests/util/errors/summary.proto";

option java_generic_services = true;
option java_package = "common.service";

service Security {
    rpc CreateOrUpdate (security.CreateSecurityRequestProto) returns (security.CreateSecurityResponseProto);

    rpc GetByIDs (security.QuerySecurityRequestProto) returns (security.QuerySecurityResponseProto);
    rpc Search (security.QuerySecurityRequestProto) returns (security.QuerySecurityResponseProto);
    rpc ListIDs (security.QuerySecurityRequestProto) returns (security.QuerySecurityResponseProto);

    rpc ValidateCreateOrUpdate (security.QuerySecurityRequestProto) returns (util.errors.SummaryProto);
    rpc ValidateQueryRequest (security.QuerySecurityRequestProto) returns (util.errors.SummaryProto);

//    rpc CreateSampleSecurity (security.SecurityRequestProto) returns (security.SecurityResponseProto);
//    rpc CreateSampleSecurities (security.SecurityRequestProto) returns (security.SecurityResponseProto);
}